--- a/css/component.css
+++ b/css/component.css
@@ -1,3 +1,14 @@
+.emotions {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	display: block;
+	font-size: 1.25rem;
+	background: rgba(0,0,0, .1);
+	padding: 5px 10px;
+	width: 100%;
+}
+
 .stack__item .stack__item-text {
 	display: none;
 }
@@ -9,7 +20,7 @@
 .stack__item-text {
 	font-size: 26px;
 	font-weight: bold;
-	margin-top: 60%;
+	margin-top: 40%;
 }
 
 @media screen and (max-width: 60em) {
@@ -22,8 +33,8 @@
 	margin: 0 auto;
 	position: relative;
 	z-index: 1000;
-	width: 320px;
-	height: 320px;
+	min-width: 320px;
+	min-height: 320px;
 	padding: 0;
 	list-style: none;
     pointer-events: none;
@@ -33,12 +44,11 @@
 	background: #fff;
 	background-blend-mode: darken;
 	background-repeat: no-repeat;
-	background-size: auto 50%;
+	background-size: auto 30%;
 	background-position-x: 50%;
 	background-position-y: 20px;
 	height: 100%;
 	width: 100%;
-	border-radius: 4px;
 	text-align: center;
 	overflow: hidden;
 	padding: 20px;
@@ -55,6 +65,8 @@
 	-ms-user-select: none;
 	user-select: none;
 	pointer-events: auto;
+	box-shadow: rgba(0, 0, 0, 0.247059) 1px 4px 5px -2px;
+	border: 2px solid rgba(0,0,0, .1);
 }
 
 @media screen and (max-width: 60em) {
@@ -94,7 +106,7 @@
 }
 
 .button:focus {
-	box-shadow: 0 0 0 3px #80F8B4;
+	box-shadow: 0 0 0 3px #0071bc;
 }
 
 .button .fa {
@@ -230,7 +242,7 @@
 }
 
 .button--accept {
-	color: #81d47d;
+	color: #0071bc;
 }
 
 .button--reject {
