--- a/css/demo.css
+++ b/css/demo.css
@@ -16,7 +16,7 @@
 body {
 	font-family: Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
 	color: #444;
-	background: #fff;
+	background: #f1f1f1;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -67,7 +67,7 @@ p.site-subheading {
 	margin: 0.5em 0 0;
 	font-size: 2em;
 	letter-spacing: 0;
-	color: #fffb00;
+	color: #e1f3f8;
 }
 
 /* Top Navigation Style */
@@ -170,8 +170,8 @@ p.site-subheading {
 	color: rgba(0,0,0,0.25);
 }
 
-.color-0 { background: #3f51b5; }
-.color-1 { background: #5cc2f1; }
+.color-0 { background: #112e51; }
+.color-1 { background: #f1f1f1; }
 .color-2 { background: #fff59d; }
 .color-3 { background: #9993c1; }
 .color-4 { background: #e88a63; }
